--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,9 @@ typings/
 # Optional eslint cache
 .eslintcache
 
+# Optional stylelint cache
+.stylelintcache
+
 # Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
@@ -160,3 +163,5 @@ dist
 
 public/js
 public/css
+
+.idea
